# tweezepy

./: .coverage  .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  README.md  Tweezepy documentation.ipynb  coverage.sh  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  simulations.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  python-pytest.yml  python-test.yml
.ipynb_checkpoints/: Tweezepy documentation-checkpoint.ipynb
binder/: environment.yml
data/: trajectory.csv
docs/: .gitignore  Makefile  Tweezepy documentation.ipynb  conf.py  config.py  index.rst  install.rst  requirements.txt
docs/_build/: .buildinfo  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/api/: allanvar.rst
docs/pages/: mcmc.ipynb  quickstart.ipynb  simulations.ipynb
docs/source/: conf.py  index.md  index.rst  tweezepy.mplstyle
docs/tutorials/: basic_usage.rst  mcmc.rst  mcmc_tutorial.rst  tutorial_rst.tpl
examples/: basic_usage.ipynb
test/: test_allanvar.py  test_simulations.py
test/data/: av_params.txt  av_std_errors.txt  avdata_overlapping.txt  avdata_standard.txt  avdata_total.txt  psd_params.txt  psd_std_errors.txt  trace.txt
tests/: .coverage  run_all_tests.py  test_allanvar.py  test_calibration.py  test_calibration.py,cover  test_notebook.ipynb  test_simulations.py
tests/coverage_html/: index.html  status.json  (+3 more)
tweezepy/: MLE.py  __init__.py  allanvar.py  convertdata.py  expressions.py  fext.py  gui-convertdata.py  simulations.py  smmcalibration.py  tweezepy_info.json
(+89 files in other folders)
